--- a/web/templates/html/classes.html
+++ b/web/templates/html/classes.html
@@ -1,43 +1,79 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<!-- basic -->
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- mobile metas -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1">
-<!-- site metas -->
-<title>Classes</title>
-<meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content=""> 
-<!-- bootstrap css -->
-<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-<!-- style css -->
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-<!-- Responsive-->
-<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-<!-- fevicon -->
-<!-- Scrollbar Custom CSS -->
-<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
-<!-- Tweaks for older IEs-->
-<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-<!-- owl stylesheets --> 
-<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-</head>
-<body>
+  <head>
+    <!-- basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- mobile metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
+    <!-- site metas -->
+    <title>강남한끼</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <!-- bootstrap css -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/bootstrap.min.css' %}"
+    />
+    <!-- style css -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/style.css' %}"
+    />
+    <!-- Responsive-->
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}" />
+    <!-- fevicon -->
+    <!-- Scrollbar Custom CSS -->
+    <link
+      rel="stylesheet"
+      href="{% static 'css/jquery.mCustomScrollbar.min.css' %}"
+    />
+    <!-- Tweaks for older IEs-->
+    <link
+      rel="stylesheet"
+      href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+    />
+    <!-- owl stylesheets -->
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'css/owl.theme.default.min.css' %}"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+      media="screen"
+    />
+  </head>
+  <body>
     <!-- header section start -->
-    <div class="header_section">
-      
+    <div
+      class="header_section"
+      style="box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px"
+      ;
+    >
       <div class="mobile_menu">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="logo_mobile"><a href="{% url 'web:main' %}"><img src="{% static 'images/logo1.png' %}"></a></div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="logo_mobile">
+            <a href="{% url 'web:main' %}"
+              ><img src="{% static 'images/logo1.png' %}"
+            /></a>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,127 +85,231 @@
                 <a class="nav-link" href="{% url 'web:about' %}">Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'web:view' %}">VIEW</a>
+                <a class="nav-link" href="{% url 'web:show_vouchers' %}">VIEW</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
       <div class="container">
-        <div class="logo" ><img src="{% static 'images/logo1.png' %}"><a href="index.html"></a></div>
-        <div class="menu_main" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;">
+        <div class="logo">
+          <img src="{% static 'images/logo1.png' %}" /><a href="index.html"></a>
+        </div>
+        <div
+          class="menu_main"
+          style="
+              rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+              rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+          "
+        >
           <ul>
             <li><a href="{% url 'web:main' %}">Home</a></li>
             <li><a href="{% url 'web:about' %}">Management</a></li>
-            <li><a href="{% url 'web:view' %}">VIEW</a></li>
-            <!--<li><a href="events.html">Events</a></li>
-            <li><a href="news.html">News</a></li>-->
+            <li><a href="{% url 'web:show_vouchers' %}">VIEW</a></li>
+            {% if user.is_authenticated %}
+            <a href="{% url 'web:logout' %}">로그아웃</a>
+            {% else %}
+            <div style="display: flex; padding-left: 10px; margin-left: 20px">
+              <form
+                method="POST"
+                action="{% url 'web:login' %}"
+                enctype="multipart/form-data"
+              >
+                {% csrf_token %}
+                <input
+                  style="height: 100%"
+                  type="text"
+                  placeholder="ID"
+                  id="id"
+                  class="account"
+                  name="id"
+                  required
+                />
+
+                <input
+                  type="password"
+                  placeholder="Password"
+                  id="password"
+                  class="account"
+                  style="height: 100%"
+                  name="password"
+                  required
+                />
+                <button id="login" class="account">login</button>
+              </form>
+            </div>
+            {% endif %}
           </ul>
         </div>
       </div>
-    <!-- header section end -->
-
+      <!-- header section end -->
     </div>
     <!-- header section end -->
     <!-- classes section start -->
     <div class="classes_section layout_padding">
       <div class="container">
         <div class="row">
-    <!-- classes section end -->
-    <!-- footer section start -->
-    <h1 class="live_text" >사용 현황</h1>
-  <table class="styled-table"  width="80%";>
-    <thead>
-        <tr>
-            <th >Name</th>
-            <th>Age</th>
-            <th>Address</th>
-            <th>Phone</th>
-            <th>사용날짜</th>
-            <th>사용금액</th>
-            <th>남은금액</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="active-row">
-            <td>김송류</td>
-            <td>999222</td>
-            <td>서울시 ...</td>
-            <td>010-0000-0000</td>
-            <td>2022.12.2</td>
-            <td>5600</td>
-            <td>1000000</td>
-
-        </tr>
-        <tr class="active-row">
-          <td>도영훈</td>
-          <td>999222</td>
-          <td>서울시 ...</td>
-          <td>010-0000-0000</td>
-          <td>2022.12.2</td>
-          <td>5600</td>
-          <td>1000000</td>
-          <tr class="active-row">
-            <td>이태검</td>
-            <td>999222</td>
-            <td>서울시 ...</td>
-            <td>010-0000-0000</td>
-            <td>2022.12.2</td>
-            <td>5600</td>
-            <td>1000000</td>
-            <tr class="active-row">
-            <td>최소영</td>
-            <td>999222</td>
-            <td>서울시 ...</td>
-            <td>010-0000-0000</td>
-            <td>2022.12.2</td>
-            <td>5600</td>
-            <td>1000000</td>
-        </tr>
-        <!-- and so on... -->
-    </tbody>
-</table>
-</div>
-</div>
-</div>
-
-<div class="footer_section layout_padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-sm-6">
-        <h1 class="customer_text">Address</h1>
-        <p class="footer_lorem_text1">Address: 서울특별시 강남구 학동로 426</p>
-        <p class="footer_lorem_text2">Tel: 02-3423-5114</p>
-        <p class="footer_lorem_text2">FAX: 02-3423-8800</p>
-        <div class="social_icon">
-          <ul>
-            <li><a href="#"><img src="{% static 'images/fb-icon.png' %}"></a></li>
-            <li><a href="#"><img src="{% static 'images/twitter-icon.png' %}"></a></li>
-            <li><a href="#"><img src="{% static 'images/google-icon.png' %}"></a></li>
-            <li><a href="#"><img src="{% static 'images/linkedin-icon.png' %}"></a></li>
-            <li><a href="#"><img src="{% static 'images/youtub-icon.png' %}"></a></li>
-          </ul>
-      </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <h1 class="customer_text">OUR Timings</h1>
-        <div class="time_main">
-          <div class="footer_lorem_text">Monday <span class="monday_text">8:00 am - 6:00 pm</span></div>
-          <div class="footer_lorem_text">Tuesday <span class="monday_text1">8:00 am - 6:00 pm</span></div>
-          <div class="footer_lorem_text">Thursday <span class="monday_text2">8:00 am - 6:00 pm</span></div>
-          <div class="footer_lorem_text">Friday <span class="monday_text3">8:00 am - 6:00 pm</span></div>
-          <div class="footer_lorem_text">Saturday <span class="monday_text4">8:00 am - 6:00 pm</span></div>
-          <div class="footer_lorem_text">Sunday <span class="monday_text5">CLOSED</span></div>
+          <!-- classes section end -->
+          <!-- footer section start -->
+          <h1 class="live_text">바우처 사용 현황</h1>
+          <div class="col"></div>
+          <div class="col-6">
+            {% comment %} {% if excel_group %}
+            <form
+              style="display: inline-block; text-align: center; padding: 10px"
+              method="POST"
+              action="{%url 'web:set_main_page_excel'%}"
+              enctype="multipart/form-data"
+            >
+              {% csrf_token %}
+              <p>
+                <select name="main_page_excel">
+                  {% for i in excel_group %} {% if main_group == i.group %}
+                  <option value="{{i.group}}" selected>{{i.group}}</option>
+                  {% else %}
+                  <option value="{{i.group}}">{{i.group}}</option>
+                  {% endif %} {% endfor %}
+                </select>
+                <button type="submit" value="find">선택</button>
+              </p>
+            </form>
+            {% endif %} {% endcomment %}
           </div>
+          <div class="col"></div>
+          <table class="styled-table" width="80%" ;>
+            <thead>
+              <tr>
+                <th style="text-align: center">Name</th>
+                <th style="text-align: center">Age</th>
+                <th style="text-align: center">Address</th>
+                <th style="text-align: center">Phone</th>
+                <th style="text-align: center">사용날짜</th>
+                <th style="text-align: center">사용금액</th>
+                <th style="text-align: center">남은금액</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for voucher in vouchers %}
+              <tr class="active-row">
+                <td>{{voucher}}</td>
+                <td>김송류</td>
+                <td>999222</td>
+                <td>서울시 ...</td>
+                <td>010-0000-0000</td>
+                <td>2022.12.2</td>
+                <td>5600</td>
+                <td>1000000</td>
+              </tr>
+              {% endfor %}
+              <tr class="active-row">
+                <td>도영훈</td>
+                <td>999222</td>
+                <td>서울시 ...</td>
+                <td>010-0000-0000</td>
+                <td>2022.12.2</td>
+                <td>5600</td>
+                <td>1000000</td>
+              </tr>
+
+              <tr class="active-row">
+                <td>이태검</td>
+                <td>999222</td>
+                <td>서울시 ...</td>
+                <td>010-0000-0000</td>
+                <td>2022.12.2</td>
+                <td>5600</td>
+                <td>1000000</td>
+              </tr>
+
+              <tr class="active-row">
+                <td>최소영</td>
+                <td>999222</td>
+                <td>서울시 ...</td>
+                <td>010-0000-0000</td>
+                <td>2022.12.2</td>
+                <td>5600</td>
+                <td>1000000</td>
+              </tr>
+              <!-- and so on... -->
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
+    <div class="footer_section layout_padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-sm-6">
+            <h1 class="customer_text">Address</h1>
+            <p class="footer_lorem_text1">
+              Address: 서울특별시 강남구 학동로 426
+            </p>
+            <p class="footer_lorem_text2">Tel: 02-3423-5114</p>
+            <p class="footer_lorem_text2">FAX: 02-3423-8800</p>
+            <div class="social_icon">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><img src="{% static 'images/fb-icon.png' %}"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="{% static 'images/twitter-icon.png' %}"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="{% static 'images/google-icon.png' %}"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="{% static 'images/linkedin-icon.png' %}"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="{% static 'images/youtub-icon.png' %}"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <h1 class="customer_text">OUR Timings</h1>
+            <div class="time_main">
+              <div class="footer_lorem_text">
+                Monday <span class="monday_text">8:00 am - 6:00 pm</span>
+              </div>
+              <div class="footer_lorem_text">
+                Tuesday <span class="monday_text1">8:00 am - 6:00 pm</span>
+              </div>
+              <div class="footer_lorem_text">
+                Thursday <span class="monday_text2">8:00 am - 6:00 pm</span>
+              </div>
+              <div class="footer_lorem_text">
+                Friday <span class="monday_text3">8:00 am - 6:00 pm</span>
+              </div>
+              <div class="footer_lorem_text">
+                Saturday <span class="monday_text4">8:00 am - 6:00 pm</span>
+              </div>
+              <div class="footer_lorem_text">
+                Sunday <span class="monday_text5">CLOSED</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--  footer section end -->
     <!-- copyright section start -->
     <div class="copyright_section">
       <div class="container">
-        <p class="copyright_text">2022 dongguk university<a href="https://html.design">  볼빨간노년기</a></p>
+        <p class="copyright_text">
+          2022 dongguk university<a href="https://html.design"> 볼빨간노년기</a>
+        </p>
       </div>
     </div>
     <!-- copyright section end -->
@@ -182,8 +322,8 @@
     <!-- sidebar -->
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- javascript --> 
+    <!-- javascript -->
     <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>    
-</body>
+    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+  </body>
 </html>
