--- a/web/templates/html/voucher.html
+++ b/web/templates/html/voucher.html
@@ -50,45 +50,21 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
       media="screen"
     />
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <!-- header section start -->
     <div
       class="header_section"
       style="box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px"
+      ;
     >
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'web:main' %}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'web:about' %}">Management</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'web:show_vouchers' %}">VIEW</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      {% comment %}
-      <div class="col-md-1"></div>
-      {% endcomment %} {% comment %}
       <div class="mobile_menu">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="logo_mobile">
+            <a href="{% url 'web:main' %}"
+              ><img src="{% static 'images/logo1.png' %}"
+            /></a>
+          </div>
           <button
             class="navbar-toggler"
             type="button"
@@ -109,23 +85,21 @@
                 <a class="nav-link" href="{% url 'web:about' %}">Management</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'web:view' %}">VIEW</a>
+                <a class="nav-link" href="{% url 'web:show_vouchers' %}"
+                  >VIEW</a
+                >
               </li>
             </ul>
           </div>
         </nav>
       </div>
-      {% endcomment %}
       <div class="container">
         <div class="logo">
-          <img src="{% static 'images/logo1.png' %}" /><a
-            href="{% url 'web:main' %}"
-          ></a>
+          <img src="{% static 'images/logo1.png' %}" /><a href="index.html"></a>
         </div>
         <div
           class="menu_main"
           style="
-          
               rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
               rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
           "
@@ -134,7 +108,6 @@
             <li><a href="{% url 'web:main' %}">Home</a></li>
             <li><a href="{% url 'web:about' %}">Management</a></li>
             <li><a href="{% url 'web:show_vouchers' %}">VIEW</a></li>
-
             {% if user.is_authenticated %}
             <a href="{% url 'web:logout' %}">로그아웃</a>
             {% else %}
@@ -170,103 +143,73 @@
             {% endif %}
           </ul>
         </div>
-        <style>
-          .main {
-            width: 250px;
-            height: 200px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            border: 1px solid rgb(255, 255, 255);
-            border-radius: 5px;
-            margin-left: 10px;
-            margin-top: 10px;
-          }
-
-          .logo {
-            margin-top: 4px;
-            margin-bottom: 10px;
-            margin-left: 5px;
-          }
-
-          #login {
-            width: 50%;
-            background-color: rgb(122, 213, 211);
-            border-color: transparent;
-            color: white;
-            {% comment %} box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, {% endcomment %}
-              rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-              rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-            margin: 10px;
-            background: #9de3e5;
-            color: #fff;
-            padding: 10px;
-            line-height: 10px;
-            cursor: pointer;
-            display: inline-block;
-          }
-
-          .account {
-            display: block;
-            margin-bottom: 5px;
-            padding: 3px;
-            border: 1px solid rgb(34, 24, 24);
-            border-radius: 3px;
-          }
-
-          #alert {
-            border-color: transparent;
-          }
-        </style>
-
-        <script src="script.js"></script>
-
-        <!-- header section end -->
       </div>
-      <div class="container-fluid"></div>
-      <!-- banner section end -->
+      <!-- header section end -->
     </div>
-
-    <!-- about section start -->
-    <div class="about_section layout_padding">
-      <div class="container">
+    <!-- header section end -->
+    <!-- classes section start -->
+    <div class="classes_section layout_padding">
+      <div class="container" >
         <div class="row">
+          <!-- classes section end -->
+          <!-- footer section start -->
+            <h1 class="live_text" style="display:inline-block;">바우처 사용 현황</h1>
+            <a  onclick="window.open(this.href, '_blank', 'width=200, height=200'); return false;" href="{% url 'web:make_voucher_page' %}">바우처 생성</a>
           <div class="col"></div>
-          <div class="col-8" style="text-align: center">
-            <h1
-              class="live_text"
-              style="
-              
-                border-radius: 10px;
-                margin: 30px;
-                padding: 20px;
-                box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-                  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-                  rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-              "
+          <div class="col-6">
+            {% comment %} {% if excel_group %}
+            <form
+              style="display: inline-block; text-align: center; padding: 10px"
+              method="POST"
+              action="{%url 'web:set_main_page_excel'%}"
+              enctype="multipart/form-data"
             >
-              복지 대상자 관리 및 모니터링
-            </h1>
-            <p class="lorem_text">
-              금융연체자인 복지대상자를 대상으로, 생필품 구매를 위한 바우처 제공
-              및 모니터링을 통한 복지사각지대 해소 서비스
-            </p>
-            <div class="online_bt_main">
-              <div class="read_bt1"><a href="#">Read More</a></div>
-              <div class="col-md-5"></div>
-            </div>
+              {% csrf_token %}
+              <p>
+                <select name="main_page_excel">
+                  {% for i in excel_group %} {% if main_group == i.group %}
+                  <option value="{{i.group}}" selected>{{i.group}}</option>
+                  {% else %}
+                  <option value="{{i.group}}">{{i.group}}</option>
+                  {% endif %} {% endfor %}
+                </select>
+                <button type="submit" value="find">선택</button>
+              </p>
+            </form>
+            {% endif %} {% endcomment %}
           </div>
           <div class="col"></div>
+          <table class="styled-table" width="80%" ;>
+            <thead>
+              <tr>
+                <th style="text-align: center">바우처 번호</th>
+                <th style="text-align: center">가격</th>
+                <th style="text-align: center">발급여부</th>
+                <th style="text-align: center">사용여부</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for voucher in vouchers %}
+              <tr class="active-row">
+                <td>{{voucher.pin_num}}</td>
+                <td>{{voucher.price}}원</td>
+                <td>
+                  {% if voucher.issue %} {{voucher.issue}} {% else %} 미발급 {%endif %}
+                </td>
+                <td>
+                  {% if voucher.use %} {{voucher.use}} {% else %} 미사용 
+                  {% endif %}
+                </td>
+              </tr>
+              {% endfor %}
+              
+              <!-- and so on... -->
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
-    <!-- about section end -->
 
-    <!-- success section end -->
-    <!-- contact section start -->
-    <!-- contact section end -->
-    <!-- footer section start -->
     <div class="footer_section layout_padding">
       <div class="container">
         <div class="row">
